; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_union.c_t3.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_union.c_t3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.anon = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @t3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @t3() #0 {
  %1 = alloca %union.anon, align 4
  %2 = bitcast %union.anon* %1 to [4 x i8]*
  %3 = getelementptr inbounds [4 x i8], [4 x i8]* %2, i64 0, i64 3
  store i8 0, i8* %3, align 1
  %4 = bitcast %union.anon* %1 to [4 x i8]*
  %5 = getelementptr inbounds [4 x i8], [4 x i8]* %4, i64 0, i64 2
  store i8 0, i8* %5, align 2
  %6 = bitcast %union.anon* %1 to [4 x i8]*
  %7 = getelementptr inbounds [4 x i8], [4 x i8]* %6, i64 0, i64 1
  store i8 0, i8* %7, align 1
  %8 = bitcast %union.anon* %1 to [4 x i8]*
  %9 = getelementptr inbounds [4 x i8], [4 x i8]* %8, i64 0, i64 0
  store i8 0, i8* %9, align 4
  %10 = bitcast %union.anon* %1 to [4 x i8]*
  %11 = getelementptr inbounds [4 x i8], [4 x i8]* %10, i64 0, i64 1
  store i8 1, i8* %11, align 1
  %12 = bitcast %union.anon* %1 to i32*
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @expect(i32 256, i32 %13)
  ret void
}

declare dso_local i32 @expect(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
